--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,113 @@
 
 body {
     font-family: sans-serif;
-    margin: 10px 20px;
+    background-color: rgb(171, 43, 81);
+    padding: 30px;
+}
+
+.font-white {
+    color: white;
+}
+
+.text-center {
+    text-align: center;
 }
 
 .mb-3 {
     margin-bottom: 1em;
 }
 
+.mt-3 {
+    margin-top: 1em;
+}
+
+.mt-4 {
+    margin-top: 1.5em;
+}
+
+/* sezione form genera biglietto*/
+
+.container-top {
+    max-width: 900px;
+    margin: 10px auto;
+    background-color: white;
+    padding: 30px 70px 15px 70px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px rgb(0, 0, 0, 0.7);
+}
+
+.row {
+    display: flex;
+}
+
+.row-button {
+    display: flex;
+    justify-content: center;
+}
+
+label {
+    color: rgb(171, 43, 81);
+}
+
+input, select {
+    padding: 7px;
+    border: 1px solid rgb(171, 43, 81);
+    border-radius: 5px;
+}
+
 button {
     cursor: pointer;
+    margin: 1em;
+    padding: 7px 5px;
+    font-size: 18px;
+    font-weight: bold;
+    color: rgb(171, 43, 81);
+    border-radius: 4px;
+    border-color: rgba(0, 0, 0, 0.5);
 }
+
+button:active {
+    border-color: rgb(171, 43, 81);
+    opacity: 0.8;
+}
+
+/* sezione biglietto hidden */
 
 .hidden {
     visibility: hidden;
+}
+
+.container-bottom {
+    max-width: 900px;
+    margin: 10px auto;
+    background-color: white;
+    padding: 20px;
+}
+
+.row-ticket {
+    display: flex;
+    border-top: 1px solid rgb(128, 128, 128);
+    border-bottom: 1px solid rgb(128, 128, 128);
+}
+
+.col-left {
+    background-color: rgb(128, 128, 128);
+    font-weight: bold;
+    font-size: 20px;
+    flex-basis: 25%;
+    padding: 15px;
+}
+
+.col-right {
+    display: flex;
+    flex-basis: 75%;
+    padding: 15px;
+}
+
+.col-right .col {
+    flex-basis: 25%;
+}
+
+.col .ticket-info {
+    margin-top: 4em;
 }
