--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: sans-serif;
-    background-color: rgb(171, 43, 81);
+    background-color: #cfe2ff;
     padding: 30px;
 }
 
@@ -32,6 +32,15 @@ body {
 
 /* sezione form genera biglietto*/
 
+#alert {
+    padding: 20px;
+    border-radius: 10px;
+    margin: 20px 0;
+    color: #842029;
+    background-color: #f8d7da;
+    border: 1px solid #f5c2c7;
+}
+
 .container-top {
     max-width: 900px;
     margin: 10px auto;
@@ -51,12 +60,12 @@ body {
 }
 
 label {
-    color: rgb(171, 43, 81);
+    color: #084298;
 }
 
 input, select {
     padding: 7px;
-    border: 1px solid rgb(171, 43, 81);
+    border: 1px solid #084298;
     border-radius: 5px;
 }
 
@@ -66,20 +75,20 @@ button {
     padding: 7px 5px;
     font-size: 18px;
     font-weight: bold;
-    color: rgb(171, 43, 81);
+    color: #084298;
     border-radius: 4px;
     border-color: rgba(0, 0, 0, 0.5);
 }
 
 button:active {
-    border-color: rgb(171, 43, 81);
+    border-color: #084298;
     opacity: 0.8;
 }
 
 /* sezione biglietto hidden */
 
 .hidden {
-    visibility: hidden;
+    display: none;
 }
 
 .container-bottom {
